# StratoTester

./: .gitignore  CMakeLists.txt  LICENSE  README.md  btlight.code-workspace
inc/: BTLight.hpp  BTResult.hpp  asset_alloc.hpp  asset_alloc_lb.hpp  asset_alloc_rb.hpp  backtest.hpp  balance_book.hpp  buy_and_hold.hpp  deps.h  lookback.hpp  mk_strategy.hpp  rebalance.hpp  result.hpp  single_asset.hpp  strategy.hpp  t_series.hpp  trader.hpp  unit_defs.hpp  utils.hpp
inc/allocators/: chained_alloc.hpp  const_alloc.hpp  lambda_alloc.hpp  weight_alloc.hpp  with_lookback.hpp  with_rebalance.hpp
inc/strategies/: const_alloc.hpp  lambda_alloc.hpp  ma_cross.hpp  random_alloc.hpp  weight_alloc.hpp
release/: backtester.hpp  make_headers.sh  make_release.sh  rel.cpp  rel.hpp  rel_prep.cpp  rel_prep.hpp
release/inc/: deps.hpp
release/latest/: StratoTester.hpp  backtester.hpp
release/scripts/: make_head.sh  make_release.sh
release/templates/: backtester.cpp  backtester.hpp  backtester_head.hpp  rel.cpp  rel.hpp
release/usage/: CMakeLists.txt  main.cxx  usage_showcase.sh
src/: BTLightConfig.h.in  CMakeLists.txt  hello.cpp  lookback.cpp  main.cpp  main.cxx  main.mm  mk_strategy.cpp  rebalance.cpp  result.cpp  single_asset.cpp  t_series.cpp  utils.cpp
tests/: CMakeLists.txt  asset_alloc_test.cpp  balance_book_test.cpp  integration_test.cpp  single_asset_test.cpp  t_series_test.cpp  test_balance_book.cpp  test_bench.cpp  test_docs.cpp  test_lookback.cpp  test_main.cpp  test_rebalance.cpp  test_rebalanced_lookback.cpp  test_result.cpp  test_single_asset.cpp  test_t_series.cpp  test_usage.cpp  test_utils.cpp  test_weight_alloc.cpp  testbench.cpp
tests/data/: ^GSPC.csv  ^IXIC.csv  abc_prices+weights.csv  csv_scratchbook.csv  sma_model.csv
tests/model/: csv_scratchbook.xlsx  dd_model.xlsx  dif_model.ipynb  full_trading.xlsx  ma_model.ipynb  ma_model.xlsx  model_ref.py  portfolio_model.xlsx  single_asset_model.xlsx
